kustomize/deployment.yaml
# deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: raspberry
  labels:
    app: raspberry
spec:
  replicas: 1
  selector:
    matchLabels:
      app: raspberry
  template:
    metadata:
      labels:
        app: raspberry
    spec:
      containers:
        - name: raspberry
          image: ghcr.io/st3fan/raspberry@sha256:b7cec8ad0b7a9e25ee46442fe41aa68d126418dfac9b64f89d740059ac81e260
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
