kustomize/ingress.yaml
# ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: raspberry
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - raspberry.sateh.cloud
      secretName: whoami-tls
  rules:
    - host: raspberry.sateh.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: raspberry
                port:
                  name: http
